--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easy-movie",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "author": {
     "name": "LunnLew"
@@ -12,6 +12,7 @@
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
+    "electron:publish": "vue-cli-service electron:build -p always",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "electron:generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten"
@@ -22,10 +23,7 @@
     "url": "https://github.com/lunnlew/easy-movie.git"
   },
   "publish": [
-    {
-      "provider": "generic",
-      "url": "https://update.electronjs.org/lunnlew/easy-movie/"
-    }
+    "github"
   ],
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
@@ -41,7 +39,6 @@
     "knex": "^0.95.14",
     "lodash.clonedeep": "^4.5.0",
     "moviedb-promise": "^3.1.12",
-    "register-service-worker": "^1.7.1",
     "sqlite3": "^5.0.2",
     "tslib": "^2.3.1",
     "tunnel": "^0.0.6",
