--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ESNext",
-    "strict": true,
+    "target": "esnext",
+    "module": "commonjs",
+    "strict": false,
+    "noImplicitAny": false,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
@@ -12,35 +13,19 @@
     "sourceMap": true,
     "allowJs": true,
     "baseUrl": ".",
-    "typeRoots": [
-      "node_modules/@types",
-      "global.d.ts",
-      "src/renderer/types/**.d.ts"
-    ],
-    "types": ["webpack-env", "element-plus/global"],
+    "outDir": "../../dist/renderer",
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
+    "typeRoots": ["node_modules/@types", "src/renderer/types/**.d.ts"],
+    // "types": ["element-plus/global"],
     "paths": {
-      "@/*": [
-        "src/renderer/main/*"
-      ],
-      "setting@/*": [
-        "src/renderer/setting/*"
-      ]
-    },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
+      "@/*": ["src/renderer/main/*"],
+      "setting@/*": ["src/renderer/setting/*"]
+    }
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "src/renderer/**/*.ts",
+    "src/renderer/**/*.tsx",
+    "src/renderer/**/*.vue"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
