--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "electron-wait": "wait-on tcp:3000 && tsc -p ./src/backend && cross-env NODE_ENV=development electron .",
-    "electron:serve": "concurrently -k \"yarn dev\" \"yarn electron-wait\"",
+    "electron:vite-wait": "wait-on tcp:3000 && tsc -p ./src/backend && cross-env NODE_ENV=development electron .",
+    "electron:serve": "concurrently -k \"yarn dev\" \"yarn electron:vite-wait\"",
+    "electron:serve-watch": "nodemon --watch src/backend --ext js,ts,tsx,mjs,json --exec yarn electron:serve",
     "electron:build": "vite build && tsc -p ./src/backend && electron-builder",
     "electron:publish": "yarn electron:build && electron-builder -p always",
     "postinstall": "electron-builder install-app-deps",
