增加作为windows服务的处理

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "electron:compile": "tsc -p ./src/backend",
-    "electron:vite-wait": "yarn electron:compile && wait-on tcp:3000 && cross-env NODE_ENV=development electron .",
+    "electron:compile-backend": "tsc -p ./src/backend",
+    "electron:vite-wait": "yarn electron:compile-backend && wait-on tcp:3000 && cross-env NODE_ENV=development electron .",
     "electron:serve": "concurrently -k \"yarn dev\" \"yarn electron:vite-wait\"",
-    "electron:serve-watch": "nodemon --watch src/backend --ext js,ts,tsx,mjs,json --exec yarn electron:serve",
-    "electron:build": "vite build && yarn electron:compile && electron-builder",
+    "electron:watch": "nodemon --watch src/backend --ext js,ts,tsx,mjs,json --exec yarn electron:backend-serve",
+    "electron:service-watch": "nodemon --watch src/backend --ext js,ts,tsx,mjs,json --exec yarn electron:service-serve",
+    "electron:service-serve": "yarn electron:compile-backend && electron . --AsService",
+    "electron:build": "vite build && yarn electron:compile-backend && electron-builder",
     "electron:publish": "yarn electron:build && electron-builder -p always",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
