重写和增加大部分类型声明

--- a/src/backend/tsconfig.json
+++ b/src/backend/tsconfig.json
@@ -16,7 +16,10 @@
     "baseUrl": ".",
     "lib": ["ESNext", "DOM"],
     // outDir: Appoint .js File output location
-    "outDir": "../../dist"
+    "outDir": "../../dist",
+    "paths": {
+      "@/*": ["*"],
+    }
   },
   "include": ["./"],
   "exclude": ["node_modules"]
