增加名称首字母排序

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "knex": "^0.95.14",
     "lodash.clonedeep": "^4.5.0",
     "moviedb-promise": "^3.1.12",
+    "pinyin-pro": "^3.4.0",
     "sqlite3": "^5.0.2",
     "tslib": "^2.3.1",
     "tunnel": "^0.0.6",
